# SchemaMine

./: .gitignore  CMakeLists.txt  Makefile  data.csv  main.cpp  small.csv  t.py
src/: main.cpp
src/include/: schema_miner.hpp
